--- a/frontend/jobtrackr-fe/src/styles.scss
+++ b/frontend/jobtrackr-fe/src/styles.scss
@@ -108,3 +108,7 @@ body {
   margin: 0 auto;
   width: 100%;
 }
+
+.compact-fields {
+  @include mat.form-field-density(-3);
+}
